添加了gitignore README log4qt

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,28 @@
-*.user
-*build*
-*bin*
-*.bak
+# C++ objects and libs
+
+*.slo
+*.lo
+*.o
 *.a
-*.lib
-*.log
-*.opensdf
-*.sdf
-*.sln
-*.spec
-*.suo
-*.vcxproj
-*.filters
-*pre1
-Debug/
-doc/html/
-GeneratedFiles/
-ipch/
-libs/
-Win32/
+*.la
+*.lai
+*.so
+*.dll
+*.dylib
+
+# Qt-es
+
+/.qmake.cache
+/.qmake.stash
+*.pro.user
+*.pro.user.*
+*.moc
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+Makefile*
+*-build-*
+
+# QtCreator
+
+*.autosave
